src/App.css
@import url('https://fonts.googleapis.com/css2?family=Fira+Code&display=swap');

body, html {
  margin: 0;
  padding: 0;
  font-family: 'Fira Code', monospace;
  background-color: #282a36; /* Dark background */
  color: #8f93a2; /* Soft text color for general readability */
}

.App {
  text-align: center;
  min-height: 100vh; /* Ensure it fills at least the whole viewport height */
  display: flex;
  flex-direction: column;
  justify-content: flex-start; /* Adjust as needed */
  align-items: center;
  font-size: calc(8px + 1.5vmin);
}

.App-header {
  background-color: #282a36; /* Matching the body background */
  border-bottom: 2px solid #6272a4; /* A hint of color for separation */
  display: flex;
}
.navlink {
  color: #ff79c6; /* Neon pink for links */
  text-decoration: none;
  margin: 0 15px;
  font-size: 1.2rem;
}
.navlink:hover {
  color: #50fa7b; /* Neon green for hover state */
}
nav {
  padding: 2px 0;
}
nav a {
  color: #ff79c6; /* Neon pink for links */
  text-decoration: none;
  margin: 0 15px;
  font-size: 1.2rem;
}

nav a:hover {
  color: #50fa7b; /* Neon green for hover state */
}
section {
  padding: 20px;
  border-bottom: 1px solid #6272a4; /* Subtle separation between sections */
  width: 80%; /* Adjust width as per your design preference */
}

h1, h2 {
  color: #f1fa8c; /* Neon yellow for headers */
}

p {
  /*color: #f8f8f2; /* Brighter text color for paragraphs */
 /* color: #ff79c6
  /*color: #d3b88c;*/
}

/* Additional styling for the "Welcome" section to stand out */
#home {
  color: #bd93f9; /* Soft purple for intro section */
  padding-bottom: 40px;
}
/* Old header stuff */
/*.icon { 
  width: 15%;
  float: left;
  margin-right: 10px;
}
.header-text {
  width: 80%;
  float: right;
}*/
.icon {
  display: flex;              /* Enables flexbox */
  /*align-items: right;        /* Vertically centers the items in the header */
  /*justify-content: flex-start; /* Aligns items to the left */
  padding: 12px;              /* Adds some padding around the contents */
  width: 20%;
  height: auto;
  margin-right: 1px;         /* Adds some space between the icon and the text */
}

.header-text {
  align-items: center;        /* Vertically centers the items in the header */
  margin-right: 1px;         /* Adds some space between the icon and the text */
  width: 100%;                /* Example width, adjust as needed */
  height: auto;               /* Keeps the aspect ratio of the image */
}
.logo-display{
  display:flex;
  align-items: center;
  
}
.logo-links{
  width: 6em;
  padding: 1.5em;
  will-change: filter;
  transition: filter 300ms;
  z-index: 2;
}
.logo-links:hover{
 /* background-color: #4fc3dc;*/
  background-color:  #ff79c6;
}
.background {
  background-image: url('../../../../wallpaper.png');
  background-size: cover;  
  background-position: center; 
  height: 100vh; 
  width: 100%;
}

